--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@ nav a:hover {
     transition: transform 0.1s;
 }
 
+.grafico {
+    margin-top: 3rem;
+}
+
 footer {
     display: flex;
     align-items: center;
